ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ydays-ingress
  namespace: ci-cd
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ydaysdevops.tk
    http:
      paths:
        - path: /app-python
          backend:
            serviceName: app-python
            servicePort: 8081
        - path: /jenkins
          backend:
            serviceName: jenkins
            servicePort: 8080
        - path: /sonarqube
          backend:
            serviceName: sonarqube
            servicePort: 9000
        - path: /grafana
          backend:
            serviceName: grafana
            servicePort: 3000
        - path: /prometheus
          backend:
            serviceName: prometheus-k8s
            servicePort: 9090
